# labs-NSU

./: README.md
lab0/: CMakeLists.txt  todo.txt
lab0/src/: CharAndNumTransfer.c  CharAndNumTransfer.h  CheckInput.c  CheckInput.h  SequenceFunctions.c  SequenceFunctions.h  TransferSN.c  TransferSN.h  globalConsts.h  main.c
lab0/test/: testlab0
lab1-0/: CMakeLists.txt  todo.txt
lab1-0/src/: main.c
lab1-0/test/: testlab1-0
lab1-1/: CMakeLists.txt  todo.txt
lab1-1/src/: main.c
lab1-1/test/: testlab1-1
lab2/: CMakeLists.txt  todo.txt
lab2/src/: AlgorithmOfPermutation.c  AlgorithmOfPermutation.h  OperationsArrayOfChar.c  OperationsArrayOfChar.h  main.c
lab2/test/: testlab2
lab3-0/: CMakeLists.txt  todo.txt
lab3-0/src/: ChangingOriginalArray.c  ChangingOriginalArray.h  QuickSort.c  QuickSort.h  main.c
lab3-1/: CMakeLists.txt  todo.txt
lab3-1/src/: main.c
lab4/: CMakeLists.txt  todo.txt
lab4/src/: main.c
lab4/test/: testlab4
lab5/: CMakeLists.txt  todo.txt
lab5/src/: main.c
lab5/test/: testlab5
lab6/: CMakeLists.txt  todo.txt
lab6/src/: main.c
lab6/test/: testlab6
lab7/: CMakeLists.txt  todo.txt
lab7/src/: main.c
lab7/test/: testlab7
lab8-0/: CMakeLists.txt  todo.txt
lab8-0/src/: main.c
lab8-0/test/: testlab8-0
lab8-1/: CMakeLists.txt  todo.txt
lab8-1/src/: main.c
lab9/: CMakeLists.txt  todo.txt
lab9/src/: main.c
lab9/test/: testlab9
